统一路由及控制器

--- a/template/system/admin_log/log_list.html
+++ b/template/system/admin_log/log_list.html
@@ -91,7 +91,7 @@
 
         table.render({
             elem: '#log-operate-table',
-            url: MODULE_PATH + 'log_operate',
+            url: MODULE_PATH + 'operate',
             page: true,
             cols: operate_cols,
             skin: 'line',
@@ -100,7 +100,7 @@
 
         table.render({
             elem: '#log-login-table',
-            url: MODULE_PATH + 'log_login',
+            url: MODULE_PATH + 'login',
             page: true,
             cols: login_cols,
             skin: 'line',
