--- a/template/system/index/index.html
+++ b/template/system/index/index.html
@@ -91,7 +91,7 @@
 				// 你可以通过 admin.setConfigPath 方法修改配置文件位置
 				// 你可以通过 admin.setConfigType 方法修改配置文件类型
 				admin.setConfigType("json");
-				admin.setConfigPath("/system/pear_config");
+				admin.setConfigPath("/system/pear");
 				admin.render();
 				
 				// 登出逻辑 
