--- a/template/system/role_auth/auth_add.html
+++ b/template/system/role_auth/auth_add.html
@@ -84,7 +84,7 @@
 
         dtree.renderSelect({
             elem: "#selectParent",
-            url: "/system/auth/selectParent",
+            url: "/system/auth/parent",
             method: 'get',
             selectInputName: {nodeId: "parentId", context: "powerName"},
             skin: "layui",
