--- a/template/system/role_auth/auth_list.html
+++ b/template/system/role_auth/auth_list.html
@@ -59,7 +59,7 @@
                 treeDefaultClose: true,
                 toolbar:'#power-toolbar',
                 elem: '#power-table',
-                url: '/system/auth/get_nodes',
+                url: '/system/auth/nodes',
                 page: false,
                 cols: [
                     [
