--- a/template/system/user/upload_profile.html
+++ b/template/system/user/upload_profile.html
@@ -63,7 +63,7 @@
                 formData.append('fileToken', timeStamp);
                 $.ajax({
                     method: "post",
-                    url: "/system/upload/def_upload", //用于文件上传的服务器端请求地址
+                    url: "/system/upload", //用于文件上传的服务器端请求地址
                     data: formData,
                     processData: false,
                     contentType: false,
