modify  template , server model

--- a/template/backup/server/server_add.html
+++ b/template/backup/server/server_add.html
@@ -37,8 +37,8 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">登陆类型</label>
                     <div class="layui-input-block">
-                        <input type="radio" name="type" lay-verify="type" lay-filter="type" value="1" title="密码" checked>
-                        <input type="radio" name="type" lay-verify="type" lay-filter="type" value="2" title="密钥">
+                        <input type="radio" name="conn_type" lay-verify="type" lay-filter="type" value="1" title="密码" checked>
+                        <input type="radio" name="conn_type" lay-verify="type" lay-filter="type" value="2" title="密钥">
                     </div>
                 </div>
                 <div class="layui-form-item conn-pwd">
